o) Add Client SSL Support
o) Add user shedding
o) Add new channel modes:
o) +R - Cannot join channel unless regisitered with NickServ
o) +M - Cannot talk on channel unless registered with NickServ
o) +S - Cannot join channel unless using SSL

-- ircd-hybrid-8beta3 Release Notes
o) &localchannels have been removed
o) /messaging opers@some.server is no longer supported

-- ircd-hybrid-8beta2 Release Notes
o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
   when set to yes
o) Added channel::max_chans_per_oper configuration directive. The old way
   was to let ircops join three times the amount of max_chans_per_user
o) Replaced MODLOAD, MODUNLOAD, MODRELOAD, MODLIST and MODRESTART commands
   with the new MODULE command which can be fed with the LOAD, UNLOAD, RELOAD
   and LIST parameters.
   MODRESTART has been entirely removed. Use "MODULE RELOAD *" to reload all modules
o) Added back server notice when a client tries to obtain a reserved nick name
o) Removed OMOTD module
o) Added 'set' to operator privilege flags. Gives access to the "SET" command
o) Improved TS6 support


-- ircd-hybrid-8beta1 Release Notes
o) Implemented full services support. Among other things, the following changes
   have been done for this:
   - Added SVSNICK, and SVSMODE command handlers
   - Added service stamps to NICK/UID messages
   - Added SVS to server capabilities (CAPAB). SVS capable servers can
     deal with extended NICK/UID messages that contain service IDs/stamps.
   - Usermode +r (registered nick) has been added, as well as
     channelmode +r (registered channel)
   - Now that usermode +r has a different function than before, rejected
     client notices now go to new usermode +j
   - Various services shortcuts have been added (/NS, /CS, /NICKSERV, /CHANSERV, etc.)
   - Added channelmode +R (only registered clients may join that channel)
   - Added usermode +R (only registered clients may send a private message)