@@ -850,12 +850,6 @@ serverhide {
 	hidden = no;
 
 	/*
-	 * disable_hidden: prevent servers hiding themselves from a
-	 * /links output.
-	 */
-	disable_hidden = no;
-
-	/*
 	 * hide_servers: hide remote servernames everywhere and instead use
 	 * hidden_name and network_desc.
 	 */
