@@ -255,7 +255,6 @@ serverhide {
 	flatten_links = no;
 	links_delay = 5 minutes;
 	hidden = no;
-	disable_hidden = no;
 	hide_servers = no;
 	hidden_name = "*.hidden.com";
 	hide_server_ips = no;
