@@ -63,8 +63,8 @@ do_links(struct Client *source_p, int parc, char *parv[])
       target_p = ptr->data;
 
       /* skip hidden servers */
-      if (!HasUMode(source_p, UMODE_OPER))
-        if (IsHidden(target_p) && !ConfigServerHide.disable_hidden)
+      if (IsHidden(target_p))
+        if (!HasUMode(source_p, UMODE_OPER))
           continue;
 
       if (!EmptyString(mask) && !match(mask, target_p->name))
