@@ -108,6 +108,8 @@ o) +S - Cannot join channel unless using SSL
 -- ircd-hybrid-8beta3 Release Notes
 o) &localchannels have been removed
 o) /messaging opers@some.server is no longer supported
+o) fixed bug that would possibly lead to a topic desynchronization
+o) removed serverhide::disable_hidden configuration option
 
 -- ircd-hybrid-8beta2 Release Notes
 o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
